# Churo-assistant

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
V1.1/: main.py
V1.2/: main.py
V1.3/: main.py
V1.4/: main.py
V1.4.1/: main.py
V1.4.2/: main.py
V1.5/: main.py
V1.6/: main.py
V1.7/: main.py
V1.7.1/: README.md  main.py
V1.8/: README.md  test2.py
V1.9/: main.py  pyproject.toml  test.py
V1.9/churovoice/: __init__.py  cli.py
V1.9/churovoice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
V2.0/V0.1.1/: README.md  main.py  pyproject.toml  test.py
V2.0/V0.1.1/churovoice/: __init__.py  assistant.py  platform_utils.py
V2.0/V0.1.1/churovoice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
